@@ -1,0 +1,28 @@
+<html>
+
+  <head>
+    <meta http-equiv="content-type"
+          content="text/html;charset=iso-8859-1">
+    <title>Adobe Core 35 AFM Files with 314 Glyph Entries - ReadMe</title>
+  </head>
+
+  <body>
+    <h1>Adobe Core 35 AFM Files with 314 Glyph Entries - ReadMe</h1>
+    <table>
+      <tr>
+        <td width="10%"></td>
+        <td width="30%">This file and the 35 PostScript(R) AFM files it
+        accompanies may be used, copied, and distributed for any purpose and
+        without charge, with or without modification, provided that all
+        copyright notices are retained; that the AFM files are not
+        distributed without this file; that all modifications to this file
+        or any of the AFM files are prominently noted in the modified
+        file(s); and that this paragraph is not modified. Adobe Systems has
+        no responsibility or obligation to support the use of the AFM
+        files.</td>
+        <td width="60%"></td>
+        </tr>
+      </table>
+    </body>
+
+</html>
